--- a/test-2/test-2.html
+++ b/test-2/test-2.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>debugging-assigment</title>
+
 </head>
 <body>
-    <h1>Help! Where are my links?!</h1>
+
+
+<h1>Help! Where are my links?!</h1>
 <p>I'm supposed to have three links in this page-- one to the New York Times, one to CNN, and one to the LA Times. But they're all broken!!!</p>
-<a href="https://www.nytimes.com">
-<a herf="http://www.cnn.com">Why is this broken??? :(</a>
-<a href="http://www.latimes.com/" Help this LA Times link is broken!!!></a>
+<a href="https://www.nytimes.com/">It should work now!?</a>
+<a href="https://www.cnn.com/">Why is this broken??? :( </a>
+<a href="https://www.latimes.com/">Help this LA Times link is broken!!!</a>
 
     
 </body>
 </html>
+
+
